<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".BusMonitoringActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/textNameId"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/text_name"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/editNameId"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/textNameId"
            android:lines="1"

            android:text=""/>
    </TableRow>
    <TableRow
        android:layout_height="50dp"
        android:layout_width="fill_parent">
        <TextView
            android:id="@+id/textVehicleId"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/text_vehicle"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/editVehicleId"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/textVehicleId"
            android:lines="@integer/editMaxLines"
            android:text=""/>
    </TableRow>
    <TableRow
        android:layout_height="50dp"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/textRoutesId"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/text_routes"
            android:textSize="20dp"/>
        <Spinner
            android:id="@+id/dropdownRoutes"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:prompt="@string/dropdown_routes_text"
            android:layout_gravity="center_horizontal"
            />
    </TableRow>
    <Button
        android:id="@+id/btnStartId"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"/>

</LinearLayout>
